fix overflow

--- a/BlazorPWA2/wwwroot/css/app.css
+++ b/BlazorPWA2/wwwroot/css/app.css
@@ -205,9 +205,9 @@ a,
 /*---- Layout ----*/
 
 .page-body {
-    height: calc(100svh + env(safe-area-inset-top) + env(safe-area-inset-bottom));
+    height: calc(100svh + env(safe-area-inset-top) /*+ env(safe-area-inset-bottom)*/);
     padding-top: calc(env(safe-area-inset-top) + 50px);
-    padding-bottom: calc(env(safe-area-inset-bottom) + env(safe-area-inset-bottom) + 60px);
+    padding-bottom: calc(env(safe-area-inset-bottom) /*+ env(safe-area-inset-bottom) */+ 60px);
     overflow-y: auto;
 }
 
